--- a/CaseHub/AndroidManifest.xml
+++ b/CaseHub/AndroidManifest.xml
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+    	android:name="com.google.android.maps.v2.API_KEY"
+    	android:value="AIzaSyDg2Ux46608Q4of6N5K3Ose7A-cSPC6MnQ"/>
     </application>
 
 </manifest>
