--- a/CaseHub/AndroidManifest.xml
+++ b/CaseHub/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
     		android:value="AIzaSyDg2Ux46608Q4of6N5K3Ose7A-cSPC6MnQ"/>
- <!--   <meta-data android:name="com.google.android.gms.version"
-        	android:value="@integer/google_play_services_version" /> -->
+		<meta-data android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
     </application>
     
     <uses-permission android:name="android.permission.INTERNET"/>
