--- a/CaseHub/.classpath
+++ b/CaseHub/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.7.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
