--- a/CaseHub/AndroidManifest.xml
+++ b/CaseHub/AndroidManifest.xml
@@ -33,6 +33,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <receiver android:name="schedule.autosilent.SilenceReceiver"></receiver>
+        <receiver android:name="schedule.autosilent.UnsilenceReceiver"></receiver>
+        
+        <receiver
+            	android:name="schedule.autosilent.BootReceiver"
+                android:enabled="false">
+            <intent-filter>
+            	<action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
