--- a/CaseHub/.classpath
+++ b/CaseHub/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="lib" path="/home/leaf/Projects &amp; Arts/Eclipse Workspaces/adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v13/android-support-v13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsoup-1.7.3.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v13.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
